--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -57,7 +57,7 @@
     <footer>
         <p>&copy; 2024 Calculator App. Všechna práva vyhrazena.</p>
     </footer> 
-    <script src="stript.js"></script> <!-- propojení html a java scriptu-->
+    <script src="script.js"></script> <!-- propojení html a java scriptu-->
 
 </body>
 </html>
