--- a/kalkulacka.html
+++ b/kalkulacka.html
@@ -7,10 +7,13 @@
 </head>
 <body>
     <div class="container">
+        <div id="sidebar">
+            <h2>Změna stylu kalkulačky</h2>
+           <div class="theme-toggler active">
+            <i class="toggler-icon"></i>
+        </div>
+        </div>
       <div class="calculator dark">   <!-- změna témat klávesnice--> 
-            <div class="theme-toggler active">
-                <i class="toggler-icon"></i>
-            </div>
             <div class="display-screen">
                 <div id="display"></div>
             </div>
@@ -58,6 +61,5 @@
         <p>&copy; 2024 Calculator App. Všechna práva vyhrazena.</p>
     </footer> 
     <script src="script.js"></script> <!-- propojení html a java scriptu-->
-
 </body>
 </html>
